--- a/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
@@ -18,15 +18,15 @@
 
     @if (Model.Count > 0)
     {
-        <ul>
-            @foreach (var book in Model)
-            {
+        @foreach (var book in Model)
+        {
 
-                <li>書名:@book.Title ISBN:@book.ISBN</li>
-                <a href="/Buyer/DeleteBook?Id=@book.WishId">刪除</a>
+            <div class="d-flex">
+                <p>書名:@book.Title ISBN:@book.ISBN</p>
+                <a href="/Buyer/DeleteBook?Id=@book.WishId" class="btn btn-danger ml-3">刪除</a>
+            </div>
 
-            }
-        </ul>
+        }
     }
     else
     {
