--- a/CoreMVC5_UsedBookProject/Views/Seller/OrderDetails.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/OrderDetails.cshtml
@@ -8,40 +8,32 @@
 }
 <div class="container-fluid">
     <h1>訂單詳情</h1>
-    <form action="~/Seller/Edit" method="post">
-        <table class="container-fluid">
-            <tr><td>@Html.DisplayNameFor(model => model.OrderId)</td><td>@Model.OrderId</td></tr>
-            <tr><td>@Html.DisplayNameFor(model => model.SellerId)</td><td>@Model.SellerId</td></tr>
-            <tr><td>@Html.DisplayNameFor(model => model.BuyerId)</td><td>@Model.BuyerId</td></tr>
-            <tr><td>@Html.DisplayNameFor(model => model.DenyReason)</td><td>@Model.DenyReason</td></tr>
-            <tr><td>@Html.DisplayNameFor(model => model.ProductId)</td><td>@Model.ProductId</td></tr>
-            <tr><td>@Html.DisplayNameFor(model => model.Trade)</td><td>@Model.Trade</td></tr>
-            @if (Model.Trade == "金錢")
-            {
-                <tr><td>@Html.DisplayNameFor(model => model.UnitPrice)</td><td>@(decimal.Round(Model.UnitPrice, 0) == 0 ? "" : decimal.Round(Model.UnitPrice, 0))</td></tr>
-            }
-            <tr><td>@Html.DisplayNameFor(model => model.Status)</td><td>@Model.Status</td></tr>
-        </table>
-        <br />
-        <div class="gap-2">
+    <table class="container-fluid">
+        <tr><td>@Html.DisplayNameFor(model => model.OrderId)</td><td>@Model.OrderId</td></tr>
+        <tr><td>@Html.DisplayNameFor(model => model.SellerId)</td><td>@Model.SellerId</td></tr>
+        <tr><td>@Html.DisplayNameFor(model => model.BuyerId)</td><td>@Model.BuyerId</td></tr>
+        <tr><td>@Html.DisplayNameFor(model => model.SellerName)</td><td>@Model.SellerName</td></tr>
+        <tr><td>@Html.DisplayNameFor(model => model.BuyerName)</td><td>@Model.BuyerName</td></tr>
+        <tr><td>@Html.DisplayNameFor(model => model.DenyReason)</td><td>@Model.DenyReason</td></tr>
+        <tr><td>@Html.DisplayNameFor(model => model.ProductId)</td><td>@Model.ProductId</td></tr>
+        <tr><td>@Html.DisplayNameFor(model => model.Trade)</td><td>@Model.Trade</td></tr>
+        @if (Model.Trade == "金錢")
+        {
+            <tr><td>@Html.DisplayNameFor(model => model.UnitPrice)</td><td>@(decimal.Round(Model.UnitPrice, 0) == 0 ? "" : decimal.Round(Model.UnitPrice, 0))</td></tr>
+        }
+        <tr><td>@Html.DisplayNameFor(model => model.Status)</td><td>@Model.Status</td></tr>
+    </table>
+    <br />
+    <div class="gap-2">
+        @if (Model.Status == "待確認")
+        {
             <a href="@Url.Action("AcceptOrder", "Seller", new {OrderId = Model.OrderId, trade = Model.Trade})" class="btn btn-primary">接受</a>
             <a href="@Url.Action("DenyOrder", "Seller", new {OrderId = Model.OrderId, trade = Model.Trade})" class="btn btn-danger">拒絕</a>
-            <button type="button" onclick="history.go(-1)" class="btn btn-secondary disable-onbeforeunload">取消</button>
-        </div>
-    </form>
+        }
+        @if (Model.Status == "待取消")
+        {
+            <a href="@Url.Action("DenyOrder", "Seller", new {OrderId = Model.OrderId, trade = Model.Trade})" class="btn btn-danger">取消訂單</a>
+        }
+        <button type="button" onclick="history.go(-1)" class="btn btn-secondary disable-onbeforeunload">取消</button>
+    </div>
 </div>
-@section topCSS{
-    <link href="~/css/seller/detailtablepartial.css" asp-append-version="true" rel="stylesheet" />
-
-    <!-- Link Swiper's CSS -->
-    <link rel="stylesheet" href="~/lib/Swiper/swiper-bundle.min.css" />
-    <!-- Demo styles -->
-    <link rel="stylesheet" href="~/css/Swiper/Swiper.css" />
-}
-@section endJS{
-    <!-- Swiper JS -->
-    <script src="~/lib//Swiper/swiper-bundle.min.js"></script>
-    <!-- Initialize Swiper -->
-    <script src="~/js/Swiper/Swiper.js"></script>
-    <script src="~/js/seller/detailtablepartial.js" asp-append-version="true"></script>
-}
