刪除按鈕弄掉

--- a/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Buyer/Wish.cshtml
@@ -23,7 +23,7 @@
 
             <div class="d-flex">
                 <p>書名:@book.Title ISBN:@book.ISBN</p>
-                <a href="/Buyer/DeleteBook?Id=@book.WishId" class="btn btn-danger ml-3">刪除</a>
+                <a href="/Buyer/DeleteBook?Id=@book.WishId" class="text-danger ml-3">刪除</a>
             </div>
 
         }
