主頁面同步

--- a/CoreMVC5_UsedBookProject/Views/GetCpu/CPUView.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/GetCpu/CPUView.cshtml
@@ -6,7 +6,7 @@
 <div class="sidebar">
     <ul class="menu">
         <li class="menu-item">
-            <a asp-controller="AdministratorHomePage" asp-action="AdministratorHome" class="navtext">管理員人員名單</a>
+            <a asp-controller="Administratorlist" asp-action="Adminlist" class="navtext">管理員人員名單</a>
         </li>
         <li class="menu-item">
             <a asp-controller="AdministratorProfile" asp-action="AdministratorData" class="navtext">管理人員控管</a>
@@ -18,7 +18,7 @@
             <a asp-controller="GetCpu" asp-action="CPUView" class="navtext" style="background-color: white; color:black;">當前CPU與記憶體使用率</a>
         </li>
         <li class="menu-item">
-            <a href="#" class="navtext">按鈕5</a>
+            <a asp-controller="AdministratorHomePage" asp-action="AdminIndex" class="navtext">主頁面更新</a>
         </li>
         <li class="menu-item">
             <a href="#" class="navtext">按鈕6</a>
