--- a/CoreMVC5_UsedBookProject/Views/Home/Index.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/Index.cshtml
@@ -1,39 +1,3 @@
-﻿﻿@using CoreMVC5_UsedBookProject.ViewModels;
-@model MyProductsViewModel
-@{
-    ViewData["Title"] = "Home Page";
-}
-<style>
-    .carousel-item img {
-        object-fit: cover;
-        width: 100%;
-        height: 600px; /* 設定圖片的高度，可以根據需求自行調整 */
-    }
-</style>
+﻿@model Textbox
+<partial name="~/Views/shared/AdminIndexPartial.cshtml" />
 
-<div id="carouselExample" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img src="~/adminimg/柴犬.jpg" class="d-block w-100" alt="Slide 1">
-        </div>
-        <div class="carousel-item">
-            <img src="~/adminimg/黃金獵犬.jpg" class="d-block w-100" alt="Slide 2">
-        </div>
-        <div class="carousel-item">
-            <img src="~/adminimg/邊境牧羊犬.jpg" class="d-block w-100" alt="Slide 3">
-        </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExample" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExample" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
-<partial name="~/Views/Home/SearchProductbyName.cshtml" />
-
-@section topCSS{
-    <link href="~/css/seller/myproducts.css" asp-append-version="true" rel="stylesheet" />
-}
