--- a/CoreMVC5_UsedBookProject/Views/Shared/_AdminLoginStatusPartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_AdminLoginStatusPartial.cshtml
@@ -5,7 +5,7 @@
         @*已登入*@
         <li class="nav-item-custom button-cover-nav">
             <div class="login-info">
-                <a class="login-name button-cover" asp-controller="AdministratorHomePage" asp-action="AdministratorHome">@User.Identity.Name</a>
+                <a class="login-name button-cover" asp-controller="Administratorlist" asp-action="Adminlist">@User.Identity.Name</a>
                 <span class="spacer"></span>
                 @Html.ActionLink("登出", "SignOut", "AdministratorLogin", null, new { @class = "btn btn-danger btn-logout-view button-cover" })
             </div>
