--- a/CoreMVC5_UsedBookProject/Views/_ViewStart.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/_ViewStart.cshtml
@@ -14,9 +14,9 @@
     {
         Layout = "_LayoutAdministratorProfile";
     }
-    else if (controller == "AdministratorHomePage")
+    else if (controller == "Administratorlist")
     {
-        Layout = "_LayoutAdministratorHomePage";
+        Layout = "_LayoutAdministratorlist";
     }
     else if (controller == "AdminChartsController")
     {
@@ -26,8 +26,12 @@
     {
         Layout = "_LayoutGetCpu";
     }
+    else if (controller == "AdministratorHomePage")
+    {
+        Layout = "_LayoutAdministratorHomePage";
+    }
     else
     {
-        Layout = "_Layout";
+        Layout = "_Layout"; 
     }
 }
