--- a/CoreMVC5_UsedBookProject/Views/AdministratorProfile/AdministratorCreate.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdministratorProfile/AdministratorCreate.cshtml
@@ -35,7 +35,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Password" class="control-label"></label>
-                <input asp-for="Password" class="form-control" required />
+                <input asp-for="Password" class="form-control" type="password" required />
                 <span asp-validation-for="Password" class="field-error"></span>
             </div>
             <div class="form-group">
