--- a/CoreMVC5_UsedBookProject/Views/AdminCharts/ChartsView.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/AdminCharts/ChartsView.cshtml
@@ -14,15 +14,15 @@
         <li class="menu-item">
             <a asp-controller="AdminCharts" asp-action="ChartsView" class="navtext" style="background-color: white; color:black;">管理員與使用者占比</a>
         </li>
-        <li class="menu-item">
+        @*<li class="menu-item">
             <a asp-controller="GetCpu" asp-action="CPUView" class="navtext">當前CPU與記憶體使用率</a>
-        </li>
+        </li>*@
         <li class="menu-item">
             <a asp-controller="AdministratorHomePage" asp-action="AdminIndex" class="navtext">主頁面更新</a>
         </li>
-        <li class="menu-item">
+        @*<li class="menu-item">
             <a href="#" class="navtext">按鈕6</a>
-        </li>
+        </li>*@
     </ul>
 </div>
 <div style="display:flex;">
