--- a/CoreMVC5_UsedBookProject/Views/Shared/_LayoutAdministratorHomePage.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_LayoutAdministratorHomePage.cshtml
@@ -40,7 +40,7 @@
             @RenderBody()
         </main>
     </div>
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted" style="background-color:white; margin-top:3px;">
         <div class="container-footer d-flex justify-content-between">
             <div>
                 &copy; 2023 - CoreMVC5_UsedBookProject - <a asp-area="" asp-controller="Home" asp-action="Privacy">隱私中心</a>
