--- a/CoreMVC5_UsedBookProject/Views/Shared/_LayoutSeller.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_LayoutSeller.cshtml
@@ -30,7 +30,7 @@
             }
         </style>
     </noscript>
-    <main role="main" id="main" style="padding-top: 75px; padding-bottom: 75px;">
+    <main role="main" id="main" style="padding-bottom: 75px;">
         @RenderBody()
     </main>
 
