--- a/CoreMVC5_UsedBookProject/Views/Home/ProductsList.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Home/ProductsList.cshtml
@@ -5,6 +5,7 @@
 }
 
 <div class="container-fluid">
+    <h1>賣場@(ViewBag.Trade == "以物易物" ? "(以物易物)" : "")</h1>
     <p>@ViewBag.Count</p>
     <div class="row py-2">
         @if (Model.Products.Count > 0)
