--- a/CoreMVC5_UsedBookProject/Views/Shared/AdminIndexPartial.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/AdminIndexPartial.cshtml
@@ -22,11 +22,11 @@
             <img src="../Images/Home/@ViewBag.Imgs[2]" asp-append-version="true" class="d-block w-100" alt="..." onerror="this.src='../Images/Home/Error.png'">
         </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev">
+    <button class="carousel-control-prev" type="button" data-target="#carouselExampleIndicators" data-slide="prev" style="background-color: transparent; border: 0px;">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators" data-slide="next">
+    <button class="carousel-control-next" type="button" data-target="#carouselExampleIndicators" data-slide="next" style="background-color: transparent; border: 0px;">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Next</span>
     </button>
