--- a/CoreMVC5_UsedBookProject/Views/Account/RegisterFromCSV.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Account/RegisterFromCSV.cshtml
@@ -20,25 +20,21 @@
                     <p id="p-file1" class="d-block ml-3">未選擇任何檔案</p>
                 </div>
                 <span asp-validation-for="File" class="text-danger"></span>
-                <p>@Html.DisplayNameFor(model => model.Role)</p>
-                <div class="form-check mt-3">
-                    <input class="form-check-input" type="radio" asp-for="Role" id="flexRadioTrade1" value="使用者">
-                    <label class="form-check-label" for="flexRadioTrade1">
-                        使用者
-                    </label>
-                </div>
-                <div class="form-check mt-3">
-                    <input class="form-check-input" type="radio" asp-for="Role" id="flexRadioTrade2" value="管理者">
-                    <label class="form-check-label" for="flexRadioTrade2">
-                        管理者
-                    </label>
-                </div>
-                <span asp-validation-for="Role" class="text-danger"></span>
                 <div class="form-group mt-3">
                     <input type="submit" name="submit" value="批量註冊" class="btn btn-primary" />
                     <input type="submit" name="submit" value="批量刪除" class="btn btn-danger ml-5" />
                 </div>
             </form>
+            <pre id="out"><p>文件內容將出現在這裡</p></pre>
+        </div>
+        <div class="col-12">
+            <p>CSV格式範例:</p>
+            <p>UserName,Password,IsAdmin</p>
+            <p>B10802001,12345678,FALSE</p>
+            <p>B10802002,12345678,FALSE</p>
+            <p>B10802003,12345678,FALSE</p>
+            <p>B10802004,12345678,FALSE</p>
+            <p>B10802005,12345678,FALSE</p>
         </div>
     </div>
 
