--- a/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                 <label for="switch-search" class="mb-0 search"><i class="bi bi-search hamber-i"></i></label><!--漢堡按鈕圖示-->
                 <input type="checkbox" id="switch-search" class="d-none" style="position: absolute; top: 0; left: 0;">
                 <div class="search-menu">
-                    <form class="form-inline flex-grow-1 px-2" action="~/Home/SearchProductbyName" method="get">
+                    <form class="form-inline flex-grow-1 px-2" action="~/Home/SearchProducts" method="get">
                         <input class="form-control mr-sm-2" type="search" placeholder="輸入書名或ISBN" id="searchInput" oninput="getPredictions()" aria-label="Search" name="name">
                         <div id="predictionList"></div>
                         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">搜尋</button>
