--- a/CoreMVC5_UsedBookProject/Views/Seller/MySales.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/MySales.cshtml
@@ -8,7 +8,7 @@
 }
 
 <div class="container-fluid pb-5 gap-2">
-    <h1>我的銷售@(ViewBag.Trade == "以物易物" ? "(以物易物)" : "(買賣)")</h1>
+    <h1>@(ViewBag.Trade == "以物易物" ? "以物易物" : "買賣")銷售</h1>
     <ul class="nav nav-pills my-3 gap-10px status">
         <li class="nav-item d-flex">
             <a href="@Url.Action("MySales", "Seller", new {status = "全部", trade = ViewBag.trade})" class="text-decoration-none" style="@(Model.StatusPage == "全部" ? "color: red; border-bottom: 2px solid red;" : "")">全部</a>
