--- a/CoreMVC5_UsedBookProject/Views/Seller/Index.cshtml
+++ b/CoreMVC5_UsedBookProject/Views/Seller/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div class="container-fluid pb-5">
     <h1>待辦事項清單</h1>
-    <h2>你的待處理事項<strong>(買賣)</strong></h2>
+    <h2><strong>買賣</strong>待處理事項</h2>
     <div class="row">
         <div class="col-4 px-1 my-1">
             <div class="py-2" style="@(Model[0]["待確認"] > 0 ? "border: 1px solid red;" : "border: 1px solid black;") background-color: #80808025;">
@@ -28,7 +28,7 @@
             </div>
         </div>
     </div>
-    <h2>你的待處理事項<strong>(以物易物)</strong></h2>
+    <h2><strong>以物易物</strong>待處理事項</h2>
     <div class="row">
         <div class="col-4 px-1 my-1">
             <div class="py-2" style="@(Model[1]["待確認"] > 0 ? "border: 1px solid red;" : "border: 1px solid black;") background-color: #80808025;">
